# Tatnez

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  requirements-ci.txt  requirements-docs.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docs.yml  scorecards.yml  security.yml
cmake/: ClangTidy.cmake  CompilerWarnings.cmake  Coverage.cmake  Sanitizers.cmake
docs/: Doxyfile.in
docs/site/: api-reference.md  architecture.md  beginner-walkthrough.md  external-libraries.md  getting-started.md  index.md  limitations-and-roadmap.md  logging.md  scripts-reference.md  testing-and-quality.md
docs/site/tutorials/: first-rumble-tone.md  using-wave-files.md
include/tatnez/audio/: NormalizedAudioBuffer.h  WaveFileReader.h
include/tatnez/controller/: ControllerConnectionSummary.h  IControllerRumbleBackend.h  PlatformControllerRumbleBackendFactory.h
include/tatnez/logging/: ApplicationLoggerFactory.h
include/tatnez/playback/: IPlaybackTimer.h  StandardPlaybackTimer.h
include/tatnez/rumble/: RumbleFrame.h  RumblePlaybackStatistics.h  RumbleSignalGenerator.h  RumbleSpeakerService.h
scripts/: build-docs.ps1  build.ps1  build.sh  check-prerequisites.ps1  common.ps1  install-prerequisites.ps1  publish_api_docs.py  run.ps1  serve-docs.ps1  start-here.ps1  start-wiki.ps1  test.ps1
src/: main.cpp
src/audio/: WaveFileReader.cpp
src/controller/: PlatformControllerRumbleBackendFactory.cpp
src/logging/: ApplicationLoggerFactory.cpp
src/playback/: StandardPlaybackTimer.cpp
src/rumble/: RumbleSignalGenerator.cpp  RumbleSpeakerService.cpp
tests/: ApplicationInfrastructureTests.cpp  RumbleSignalGeneratorTests.cpp  RumbleSpeakerServiceTests.cpp  TestMain.cpp  WaveFileReaderTests.cpp
wiki/: Dockerfile  README.md  docker-compose.yml
wiki/scripts/: entrypoint.sh
wiki/seed/: Beginner-Glossary.md  Home.md  Signal-Flow.md  Troubleshooting.md
